# Phantom_vanilla

./: .gitignore  CMakeLists.txt  LICENSE  README.md  phantom_sim.cc
analysis/: dose_analysis.C  process_analysis.C  single_bragg.C  single_transverse.C  sobp_auto.C  sobp_solver.C  transverse_profile.C
include/: DetectorConstruction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh
macros/: run_gps.mac  run_gun.mac  run_gun_100k.mac  run_single.mac  run_sobp.mac  run_sobp_1000.mac  run_sobp_gps.mac  run_sobp_mono.mac  run_sobp_realista.mac  vis.mac
src/: DetectorConstruction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc
